--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/logo_seven_star"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/logo_seven_star"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bangolelautry"
         android:requestLegacyExternalStorage="true"
@@ -44,7 +44,7 @@
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/logo" />
+            android:resource="@drawable/logo_seven_star" />
         <service
             android:name=".commonutils.NotificationService"
             android:stopWithTask="false">
